# firecrown

./: .coveragerc  .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  API.md  CI_WORKFLOWS.md  CONTRIBUTING.md  CONTRIBUTING_ADVANCED.md  LICENSE  MANIFEST.in  Makefile  Making_a_new_release.md  README-development-notes.md  README.md  README.rst  TODO.md  check-docs  codecov.yml  dev-requirements.txt  environment-mini.yml  environment.yml  lab.ipynb  pre-commit-check  pylintrc  pylintrc_for_tests  pyproject.toml  pytest.ini  readthedocs_requirements.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: check_branch.py  ci-branches.json  pull_request_template.md  update_ci.py
docker/: Dockerfile
docs/: .gitignore  API.md  Makefile  apidoc.sh  apple_m1_instructions.rst  basic_usage.rst  conf.py  contrib.rst  dev-notes.rst  developer_installation.rst  diagrams.rst  environment.yml  index.rst  install_quick.rst  intro.rst  non_developer_installation.rst  numcosmo_bestfit.rst  numcosmo_cookbook.rst  numcosmo_fisher.rst  numcosmo_fisher_bias.rst  release-dependency-policy.rst  requirements.txt  sacc_usage.rst  termcond.rst  tutorial.rst
documentation/: Makefile  Welcome_page.rst  conf.py  index.rst
examples/: .gitignore  3x2pt.ipynb  3x2pt.yaml  README.md  cosmicshear.yaml  generate_3x2pt_data.py  generate_cosmicshear_data.py  pylintrc
fctools/: README.md  __init__.py  coverage_summary.py  coverage_to_tsv.py  list_tools.py  measurement_compatibility.py  print_code.py  print_hierarchy.py  test_ci_local.sh  tracer.py
firecrown/: io.py  (+25 more)
(+1292 files in other folders)
