[metadata]
name = firecrown
version = attr: firecrown.version.__version__
author = DESCs Firecrown Developers
description = DESC Cosmology Likelihood Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LSSTDESC/firecrown
license_files = LICENSE

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    astropy
    cosmosis
    cobaya
    fitsio
    numpy
    scipy
    numcosmo_py
    pandas
    pyccl
    sacc
    yaml

[options.packages.find]
exclude =
    examples*
    tests*
    tutorial*
    docs*

[flake8]
max_line_length=88
per-file-ignores =
    examples/srd_sn/generate_sn_data.py:E501

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
exclude = build|docs|.venv|venv
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional = True
strict_equality = True
extra_checks = True
disallow_subclassing_any = True
disallow_untyped_decorators = True
explicit_package_bases = True
#disallow_any_generics = True


[mypy-firecrown.connector.cobaya.*]
disallow_subclassing_any = False
